<?xml version="1.0"?>

<package format="2">
  <name>mars_ros</name>
  <version>1.0.0</version>

  <description>
    The mars_ros package, as a wrapper for the Modular and Robust State-Estimation Framework (MaRS).
  </description>

  <maintainer email="christian.brommer@aau.at">Christian Brommer</maintainer>
  <author email="christian.brommer@aau.at">Christian Brommer</author>
  
  <license>BSD-2-Clause-License with no commercial use allowed. No license in patents is granted.</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
 
  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>message_runtime</exec_depend>

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>

