<?xml version="1.0"?>

<package format="2">
  <name>mars_ros</name>
  <version>1.0.0</version>

  <description>
    The mars_ros package, as a wrapper for the Modular and Robust State-Estimation Framework (MaRS).
  </description>

  <maintainer email="christian.brommer@aau.at">Christian Brommer</maintainer>
  <author email="christian.brommer@aau.at">Christian Brommer</author>
  
  <license>BSD-2-Clause-License with no commercial use allowed. No license in patents is granted.</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
 
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>

